
	* src/port.h,
	  src/SDCCglobl.h,
	  src/SDCCast.c,
	  src/SDCCdwarf2.c,
	  src/SDCCglue.c,
	  src/SDCCicode.c,
	  src/SDCCopt.c,
	  src/SDCCsymt.c,
	  src/ds390/gen.c,
	  src/ds390/main.c,
	  src/ds390/ralloc.c,
	  src/hc08/gen.c,
	  src/mcs51/gen.c,
	  src/mcs51/main.c,
	  src/mcs51/ralloc.c,
	  src/pic14/gen.c,
	  src/pic16/gen.c:
	  Rename pointer size macros for clarification.

2018-03-24 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/longlong.c:
	  Disable test for mcs51 medium model.
	* support/regression/tests/bool.c:
	  Test assignments between bool bitfields.

2018-03-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/mcs51/gen.c,
	  support/regression/tests/gcc-torture-execute-950612-1.c:
	  Fix bug #2669.
	* support/regression/tests/longlong.c:
	  Enable full long long regression testing for large and huge mcs51 memory model.

2018-03-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/mcs51/gen.c:
	  Fix a bug in code generation that was triggered by lospre.
	* support/regression/tests/gcc-torture-execute-20060110-2.c:
	  Enable test for mcs51.
	* support/regression/tests/gcc-torture-execute-920922-1.c:
	  Document that mcs51 exploits undefined behaviour.

2018-03-23 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/valdiag/valdiag.py: define some port specific
	  macros (__has_bit, __has_data, __has_xdata, __has_reentrant)
	  to simplify conditions
	* support/valdiag/tests/bug-971834.c,
	* support/valdiag/tests/enum.c,
	* support/valdiag/tests/funcdec.c,
	* support/valdiag/tests/primtypes.c,
	* support/valdiag/tests/switch.c,
	* support/valdiag/tests/tentdecl.c,
	* support/valdiag/tests/typedef.c: update for newer SDCC/GCC versions

2018-03-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/mcs51/gen.c,
	  src/mcs51/ralloc.c:
	  Improve _Bool handling.

2018-03-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/mcs51/ralloc.c:
	  Allocate some local _Bool to bit registers.

2018-03-22 Philipp Klaus Krause <pkk AT spth.de>
